quick fix, bigger issues but this should now show on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -225,7 +225,6 @@
     position: absolute;
     width: 100%;
     z-index: index($layers, navroot);
-    overflow-y: auto;
 
     &.nav-mobile--light {
       svg path { fill: #fff; }
